@@ -10,6 +10,11 @@
 
 RELEASE 0.10 - XXX
 
+  From Derrick 'dman' Hudson:
+
+  - Support Repositories on other file systems by symlinking or
+    copying files when hard linking won't work.
+
   From Steven Knight:
 
   - Remove Python bytecode (*.pyc) files from the scons-local packages.
